fixes on mobile

--- a/index.css
+++ b/index.css
@@ -300,7 +300,7 @@ body {
         align-items: center;
         padding-left: 8%;
         padding-right: 8%;
-        gap: 40px;
+        gap: 32px;
     }
 
     .outline-intro {
@@ -377,7 +377,7 @@ body {
     .Project {
         padding: 24px;
         gap: 16px;
-        border-radius: 12px;
+        border-radius: 16px;
         height: fit-content;
     }
 
